WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55826
[GTK] http/tests/plugins/post-url-file.html fails on GTK+
https://bugs.webkit.org/show_bug.cgi?id=55826
Summary
[GTK] http/tests/plugins/post-url-file.html fails on GTK+
Martin Robinson
Reported
2011-03-05 13:29:22 PST
http/tests/plugins/post-url-file.html fails on with the GTK+ DumpRenderTree and furthermore, PluginView::handlePostReadFile, which it tests is not implemented with GLib or GIO APIs.
Attachments
Patch fixing this issue
(5.45 KB, patch)
2011-03-05 13:34 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Version of the patch supporting both older and newer versions of the CGI module
(5.68 KB, patch)
2011-03-10 10:29 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-03-05 13:34:14 PST
Created
attachment 84873
[details]
Patch fixing this issue
Xan Lopez
Comment 2
2011-03-05 13:49:02 PST
Comment on
attachment 84873
[details]
Patch fixing this issue Looks good.
Martin Robinson
Comment 3
2011-03-05 14:02:07 PST
Comment on
attachment 84873
[details]
Patch fixing this issue Clearing flags on attachment: 84873 Committed
r80428
: <
http://trac.webkit.org/changeset/80428
>
Martin Robinson
Comment 4
2011-03-05 14:02:10 PST
All reviewed patches have been landed. Closing bug.
Jessie Berlin
Comment 5
2011-03-05 15:15:03 PST
(In reply to
comment #4
)
> All reviewed patches have been landed. Closing bug.
I think this patch might have broken http/tests/plugins/post-url-file.html on the Snow Leopard Release Test bots:
http://build.webkit.org/builders/SnowLeopard%20Intel%20Release%20%28Tests%29/builds/26369
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r80428%20(26370)/results.html
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r80429%20(26371)/http/tests/plugins/post-url-file-pretty-diff.html
Martin Robinson
Comment 6
2011-03-10 10:23:23 PST
Reopening this one as the original commit was rolled out.
Martin Robinson
Comment 7
2011-03-10 10:29:13 PST
Created
attachment 85347
[details]
Version of the patch supporting both older and newer versions of the CGI module
Xan Lopez
Comment 8
2011-04-01 16:15:23 PDT
Comment on
attachment 85347
[details]
Version of the patch supporting both older and newer versions of the CGI module r=me
Martin Robinson
Comment 9
2011-04-04 07:34:17 PDT
Comment on
attachment 85347
[details]
Version of the patch supporting both older and newer versions of the CGI module Clearing flags on attachment: 85347 Committed
r82833
: <
http://trac.webkit.org/changeset/82833
>
Martin Robinson
Comment 10
2011-04-04 07:34:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug