2011-03-05  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] http/tests/plugins/post-url-file.html fails on GTK+
        https://bugs.webkit.org/show_bug.cgi?id=55826

        * http/tests/plugins/resources/dump-post.pl: Instead of printing out the "keywords" parameter,
        print out the POSTDATA parameter. Printing "keywords" did not seem to work on the version of
        Apache/Perl/CGI that existed on my machine. According to the Perl CGI module documentation
        using 'POSTDATA' is the correct way to print the entire POSTDATA.
        * platform/gtk/Skipped: Unskip the test which is now passing.
2011-03-05  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] http/tests/plugins/post-url-file.html fails on GTK+
        https://bugs.webkit.org/show_bug.cgi?id=55826

        Correct the implementation of handlePostReadFile which uses GIO APIs and
        actually resizes the buffer to fit the entire size of the file data. This
        was likely leading to memory corruption until now.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::handlePostReadFile): Fix this method.

Canonical link: https://commits.webkit.org/70322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80428 268f45cc-cd09-0410-ab3c-d52691b4dbfc